# Gameproject

./: .gitignore  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Character.cpp  Character.hpp  DEFINITIONS.hpp  FinishState.cpp  FinishState.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  InstructionState.cpp  InstructionState.hpp  MainMenuState.cpp  MainMenuState.hpp  Makefile  PauseState.cpp  PauseState.hpp  Platform.cpp  Platform.hpp  SoundManager.cpp  SoundManager.hpp  SplashState.cpp  SplashState.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  TestState.hpp  controlState.cpp  controlState.hpp  klassediagram.puml  main.cpp
Documentatie/Backlog/: Trello link.txt
Documentatie/Game design document/: GDD.docx
Documentatie/Individuele logboeken/: Code User Story Daan.pptx  Code User Story Daan2.pptx  Code User Story Daan3.pptx  individueel_logboek_1_joris.pptx  individueel_logboek_2_joris.pptx  individueel_logboek_3_joris.pptx  ppt_roel_week2.pptx  ppt_roel_week3.pptx
Documentatie/Scrumverslagen/: Scrumverslag 3.docx  Scrumverslag1.docx  Scrumverslag2.docx
Documentatie/Technisch verslag/: Technisch Verslag GAME.docx
Levels/: Level1.cpp  Level1.hpp  Level2.cpp  Level2.hpp  Level3.cpp  Level3.hpp  TemplateLevel.cpp  TemplateLevel.hpp  TestLevel.cpp  TestLevel.hpp
UML/: Character.puml  TemplateLevel.puml  klassediagram.puml
temp_files/: main.cpp
